--- a/classical/webapp/montecarlo/templates/montecarlo/euro_montecarlo.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/euro_montecarlo.html
@@ -11,30 +11,30 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="page-header">
-              <h1 id="tables”>European Options</h1>
+              <h1 id="tables>European Options</h1>
             </div>
 
             <div class="bs-component">
               <table class="table table-hover">
                 <thead>
                   <tr>
-                    <th scope="col”>Option_Value</th>
-                    <th scope="col”>Time Taken</th>
+                    <th scope="col">Option_Value</th>
+                    <th scope="col">Time Taken</th>
 
                   </tr>
                 </thead>
                 <tbody>
 
                   <tr class="table-light">
-                    <th scope="row”>Monte Carlo Simulation</th>
-                       <td>{{Option_Value }</td>
-                       <td>{{ time_taken }</td>
+                 
+                       <td>{{option_value}}</td>
+                       <td>{{ time_taken}}</td>
                   </tr>
-                % endfor
+              
 
                   </tbody>
               </table>
-            </div><!-- /example -->
+            </div>
           </div>
         </div>
       </div>
