--- a/classical/webapp/montecarlo/templates/montecarlo/main.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/main.html
@@ -32,6 +32,7 @@
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                       <a class="nav-link" href="/montecarlo/euro_option">Euro Option</a>
+                      <a class="nav-link" href="/montecarlo/asian_option">Asian Option</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="/montecarlo">Sign Out</a>
