--- a/classical/webapp/montecarlo/templates/montecarlo/euro_option.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/euro_option.html
@@ -40,7 +40,7 @@
                  <div class="collapse navbar-collapse" id="navbarColor01">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="/montecarlo/">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="/montecarlo/main">Home <span class="sr-only">(current)</span></a>
                     </li>
                   </ul>
                 </div>
