--- a/classical/webapp/montecarlo/templates/montecarlo/least_square_montecarlo.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/least_square_montecarlo.html
@@ -77,7 +77,7 @@ least_square{% load staticfiles %}
               <table class="table table-hover">
                 <thead>
                   <tr>
-                    <th scope="col">AmericanOptionsLSMC</th>
+                    <th scope="col">Least Square MontecarloC</th>
                     <th scope="col">Time Taken</th>
 
                   </tr>
@@ -86,7 +86,7 @@ least_square{% load staticfiles %}
 
                   <tr class="table-light">
 
-                       <td>{{ AmericanOptionsLSMC }}</td>
+                       <td>{{ LeastSquareMontecarlo }}</td>
                        <td>{{ time }}</td>
                   </tr>
 
