--- a/classical/webapp/montecarlo/templates/montecarlo/least_square_option.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/least_square_option.html
@@ -105,9 +105,9 @@
                   </div>
 
                   <div class="form-group">
-                    <label for="maturity">Maturity</label>
-                    <input type="number" step=0.01 class="form-control" id="maturity" name="maturity" aria-describedby="maturityHelp" placeholder="Maturity">
-                    <small id="maturityHelp" class="form-text text-muted">{{ error_maturity }}</small>
+                    <label for="granularity_for_time">Granularity For Time</label>
+                    <input type="number" step=0.01 class="form-control" id="granularity_for_time" name="granularity_for_time" aria-describedby="granularity_for_timeHelp" placeholder="Granularity For Time">
+                    <small id="granularity_for_timeHelp" class="form-text text-muted">{{ error_granularity_for_time }}</small>
                   </div>
 
                   <div class="form-group">
@@ -123,9 +123,9 @@
 
                   </div> -->
                   <div class="form-group">
-                    <label for="div">Div</label>
-                    <input type="number" step=0.01 class="form-control" id="div" name="div" aria-describedby="divHelp" placeholder="Div">
-                    <small id="divHelp" class="form-text text-muted">{{ error_div }}</small>
+                    <label for="dividend_yield">Dividend Yield</label>
+                    <input type="number" step=0.01 class="form-control" id="dividend_yield" name="dividend_yield" aria-describedby="dividend_yieldHelp" placeholder="Dividend Yield">
+                    <small id="dividend_yieldHelp" class="form-text text-muted">{{ error_dividend_yield }}</small>
                   </div>
 <!--
                   <div class="form-group">
