--- a/classical/webapp/montecarlo/templates/montecarlo/least_square_montecarlo.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/least_square_montecarlo.html
@@ -1,4 +1,4 @@
-least_square{% load staticfiles %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="{% static 'montecarlo/bootstrap.css' %}">
