new_blog_webapp

--- a/classical/webapp/montecarlo/templates/montecarlo/login.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/login.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="{% static 'montecarlo/bootstrap.css' %}">
 <link rel="stylesheet" href="{% static 'montecarlo/custom.min.css' %}">
+    <link rel="stylesheet" href="{% static 'montecarlo/base.css' %}">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{% block title %}Monte Carlo Quant{% endblock %}</title>
 
@@ -16,7 +17,7 @@
 <div class="container">
 
       <div class="page-header" id="banner">
-        <div class="row">
+        <div class="myrow">
           <div class="col-lg-8 col-md-7 col-sm-6">
             <h1>Monte Carlo</h1>
             <p class="lead"> Monte Carlo Quant</p>
