--- a/classical/webapp/montecarlo/templates/montecarlo/euro_montecarlo.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/euro_montecarlo.html
@@ -73,7 +73,7 @@
           <div class="col-lg-12">
             <div class="page-header">
               <h3 id="tables">European Options-MonteCarlo</h3>
-
+              <h3 id="tables">European Options-MonteCarlo</h3>
 
               <h1 id="tables>European Options</h1>
 
@@ -93,6 +93,9 @@
                   <tr class="table-light">
                        <td>{{option_value}}</td>
                        <td>{{time_taken}}</td>
+                  </tr>
+                       <td>{{option_value}}</td>
+                       <td>{{ time_taken}}</td>
                   </tr>
 
                   </tbody>
