new_blog_webapp

--- a/classical/webapp/montecarlo/templates/montecarlo/main.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/main.html
@@ -44,7 +44,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="/montecarlo">Sign Out</a>
+                      <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0" action="/montecarlo/search/" method="post">
