--- a/classical/webapp/montecarlo/templates/montecarlo/asian_option.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/asian_option.html
@@ -40,8 +40,12 @@
                  <div class="collapse navbar-collapse" id="navbarColor01">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="/montecarlo/main">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="{% url 'blog-home' %}">Home<span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/montecarlo/main">Formulae <span class="sr-only">(current)</span></a>
+                    </li>
+
                   </ul>
                 </div>
               </nav>
