--- a/classical/webapp/montecarlo/templates/montecarlo/black_sholes_montecarlo.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/black_sholes_montecarlo.html
@@ -40,7 +40,7 @@
                  <div class="collapse navbar-collapse" id="navbarColor01">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                      <a class="nav-link" href="/montecarlo/main">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="/blog">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="/montecarlo/black_sholes_option">Black Sholes  Option</a>
