--- a/classical/webapp/montecarlo/templates/montecarlo/euro_montecarlo.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/euro_montecarlo.html
@@ -41,8 +41,8 @@
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
 
-                      <a class="nav-link" href="/montecarlo/main">Home <span class="sr-only">(current)</span></a>
-                      <a class="nav-link" href="/montecarlo/">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="/blog">Home <span class="sr-only">(current)</span></a>
+
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="/montecarlo/euro_option">Euro Option</a>
