--- a/classical/webapp/montecarlo/templates/montecarlo/login.html
+++ b/classical/webapp/montecarlo/templates/montecarlo/login.html
@@ -4,6 +4,10 @@
 <link rel="stylesheet" href="{% static 'montecarlo/bootstrap.css' %}">
 <link rel="stylesheet" href="{% static 'montecarlo/custom.min.css' %}">
     <link rel="stylesheet" href="{% static 'montecarlo/base.css' %}">
+<script src="{% static 'montecarlo/js/jquery.min.js' %}"></script>
+    <script src="{% static 'montecarlo/js/popper.min.js'%}"></script>
+    <script src="{% static 'montecarlo/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'montecarlo/js/custom.js' %}"></script>    
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{% block title %}Monte Carlo Quant{% endblock %}</title>
 
